style.css
h1 {
  text-align: center;
}
.elem {
  align-self: center;
}
body {
  display: flex;
  flex-direction: column;
}

button {
  text-align: center;
  display: inline-block;
}

video{
  text-align: center;
}

